# tales-lyrics-plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
android/src/main/kotlin/com/squet/talesplayer/lyrics/: LyricsPluginRegistrar.kt
android/src/main/kotlin/com/squet/talesplayer/lyrics/whisper/: WhisperPlugin.kt
docs/: BUILD_NATIVE.md
lib/lyrics/: audio_visualizer.dart  lyrics_model.dart  lyrics_pack_manager.dart  lyrics_provider.dart  lyrics_screen.dart  lyrics_service.dart  lyrics_state.dart  lyrics_sync_controller.dart  whisper_bridge.dart
native/: whisper_jni.cpp
